fix emulator hides/covers bottom part of code area

--- a/index.css
+++ b/index.css
@@ -10,9 +10,10 @@ body {
   grid-template-areas:
     "controlPanel controlPanel"
     "messagePanel messagePanel"
-    "code output";
+    "code output"
+    "emulator emulator";
   grid-template-columns: auto 30em;
-  grid-template-rows: auto min-content auto;
+  grid-template-rows: auto min-content auto auto;
 }
 
 .controlPanel {
@@ -143,7 +144,7 @@ body {
   height: 0;
   display: flex;
   /* Instead of height: 0 */
-  position: fixed;
+  grid-area: "emulator";
   bottom: 0;
   left: 0;
   right: 0;
